<resources>
    <string name="app_name">Newsifyly</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="query">Enter Search Query</string>
    <string name="btnSearch_text">SEARCH</string>

    <string name="title_activity_article">ArticleActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fbEndDate">Change End Date</string>
    <string name="fbStartDate">Change Start Date</string>
    <string name="fbSortOrder">Change Sort Order</string>
    <string name="arts">Arts</string>
    <string name="technology">Technology</string>
    <string name="politics">Politics</string>
    <string name="culture">Culture</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="fbCategories">Choose Categories</string>
</resources>
