<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LlCategory_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="roboto"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="Choose News Desk"
        android:textColor="@color/labels"
        android:textSize="20sp" />

    <!--<RelativeLayout-->
    <!--android:layout_width="20dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/textView"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_alignRight="@+id/textView"-->
    <!--android:layout_alignEnd="@+id/textView">-->
    <!--</RelativeLayout>-->

    <LinearLayout
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dialog_right_padding">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@string/sports" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dialog_right_padding">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@string/business" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dialog_right_padding">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbCulture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@string/culture" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dialog_right_padding">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbPolitics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@string/politics" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dialog_right_padding">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbTechnology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@string/technology" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dialog_right_padding">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@string/arts" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line">

    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btSubmit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="SUBMIT"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btQuit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="bottom"
            android:layout_toLeftOf="@+id/btSubmit"
            android:layout_toStartOf="@+id/btSubmit"
            android:text="QUIT"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>
</LinearLayout>

